# Exemplar

./: .gitignore  DATASETS.md  LICENSE  README.md  pyproject.toml  requirements-baselines.txt  requirements.txt
active_segmenter/: __init__.py  config.py  types.py
configs/: dsb2018.yaml
scripts/: al_testbed.py  analyze_al_optimality.py  analyze_learning_curve.py  biomedparse_bench.py  ceiling_test.py  cellpose_stardist_bench.py  classical_upsample_eval.py  collect_sota.py  compose_qualitative_grid.py  consolidate_paper.py  cradio_probe.py  crf_test.py  crop_proposal_eval.py  demo_prelabel.py  driver_gpu0.sh  driver_gpu1.sh  dump_qualitative_grid.py  failure_analysis.py  fg_sensitivity.py  fgprop_prescreen.py  film_poc.py  finetune_budget_sweep.py  gate_constants_probe.py  hyperbank_confound.py  instance_eval.py  k_scaling_mem.py  lodo_eval.py  lowk_coverage_study.py  make_ablation_table.py  make_final_kscale.py  make_semantic_tables.py  make_table_data.py  merge_score_trees.py  microsam_bench.py  monuseg_ceiling_probe.py  monuseg_fg_diag.py  morph_descriptors.py  mproto_prescreen.py  mr_aggregate.py  native_res_train_eval.py  (+35 more)
tests/: conftest.py  test_ablation_arms.py  test_acquire.py  test_badge.py  test_baseline_score_contract.py  test_boundary_dou.py  test_channel_separability.py  test_cluster_scales.py  test_config_types.py  test_correspondence.py  test_datasets_fewshot.py  test_datasets_oracle.py  test_datasets_panel.py  test_encoder_cache.py  test_encoder_dinov3.py  test_encoder_factory.py  test_fg_coverage.py  test_gram_refine.py  test_harness.py  test_ptsam.py  (+38 more)
(+477 files in other folders)
